fix: Add an event listener to support accordion on mobile devices

--- a/src/components/ui/accordion/style.module.scss
+++ b/src/components/ui/accordion/style.module.scss
@@ -9,6 +9,10 @@
   overflow: hidden;
   transition: all var(--transition-time);
 }
+.wrapper {
+  display: block;
+  border: none;
+}
 .header {
   display: block;
   font-size: 1.125rem;
